[project]
name = "croche-encantado-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=4.3.0",
    "cors>=1.0.1",
    "fastapi>=0.115.12",
    "psycopg2>=2.9.10",
    "pydantic>=2.11.5",
    "uvicorn>=0.34.2",
]
