[project]
name = "croche-encantado-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=4.3.0",
    "cors>=1.0.1",
    "fastapi>=0.115.12",
    "jwt>=1.3.1",
    "psycopg2>=2.9.10",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.5",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.0",
    "secure-smtplib>=0.1.1",
    "uvicorn>=0.34.2",
]
